SERVER-15552 mapReduce failure to insert to temp ns should abort op

(cherry picked from commit a4d077c775d8322c9e59313c3618fe73ac85e925)